# src/api/api.module.ts
@@ -12,6 +12,7 @@ import { AccessTokenGuard } from './auth/guards/access-token.guard.js';
 import { ErrorFilter } from './common/filters/error.filter.js';
 import { FilesModule } from './files/files.module.js';
 import { HealthModule } from './health/health.module.js';
+import { ActivitiesModule } from './activities/activities.module.js';
 import { MeModule } from './me/me.module.js';
 import { ProfilesModule } from './profiles/profiles.module.js';
 import { NotificationsModule } from './notifications/notifications.module.js';
@@ -43,6 +44,7 @@ import { UsersModule } from './users/users.module.js';
     ProfilesModule,
     ProjectsModule,
     NotificationsModule,
+    ActivitiesModule,
   ],
   providers: [
     ErrorFilter,
